[project]
name = "vein"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nat-chan", email = "ogino.natsuki.tm@alumni.tsukuba.ac.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy==1.9.0",
    "pylance==0.10.9",
    "pylint==3.1.0",
    "black==24.3.0",
    "pydebug==1.0.3",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vein"]